--- a/MyEvBackend/MyEvBackend/MyEvBackend.csproj
+++ b/MyEvBackend/MyEvBackend/MyEvBackend.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.28.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="Twilio" Version="5.75.3" />
   </ItemGroup>
 
 </Project>
